# Project-Aquinas

./: .cproject  .gitignore  .project  CMakeLists.txt  CREDITS.txt  LICENSE.txt  PARENT-LICENSE.txt  README.md  gdb.exe.stackdump  universal_standard.md
playground/: catholicus.u  prototype.u
src/: CMakeLists.txt  aquinas.c  associative_array.c  associative_array.h  binary_trie.c  binary_trie.h  bit_trie.c  bit_trie.h  catholicus.c  compiler.c  compiler.h  debug.c  debug.h  error.c  error.h  memory.c  memory.h  memory_manager.c  memory_manager.h  modulus.c  pattern.c  pattern.h  permutation.c  permutation.h  platform.c  pointer.c  pointer.h  reference_vm.c  reference_vm.h  tests.h
src/constructs/: binary_tree.c  binary_tree.h  dynarray.c  dynarray.h  map.c  map.h  tree.c  tree.h
src/documentation/: (In Progress) Anno Domini Syntax and Semantics.md  Metacompiling.md  On Design & Implementation.md  Project Aquinas Glossary.md  Tree Constructs.md
src/documentation/Tree Constructs/: Binary Trees.md
src/include/: asm.c  asm.h  data.c  data.h  data_alignment_convenience_structs.h  hølfferu.h  memory.c  memory.h  platform.h  pointer.h  project.h  state.c  state.h  steørmytu.c  steørmytu.h  type.h
src/include/memory/: m_context.h  m_object.c  m_object.h  m_pointer_offset.c  m_pointer_offset.h  m_windows.c  m_windows.h  memory.c  memory.h  pointer.c  pointer.h
src/include/memory/windows/: m_windows.c  m_windows.h  m_windows_ImperfectUnitAllocator.c  m_windows_ImperfectUnitAllocator.h  m_windows_ImperfectUnitStackAllocator.c  m_windows_ImperfectUnitStackAllocator.h  platform.c
src/include/state/: StateholdSource.h  allocating.h  array.c  array.h
src/include/state/windows/: m_windows.c  m_windows.h  m_windows_ImperfectUnitAllocator.c  m_windows_ImperfectUnitAllocator.h  m_windows_ImperfectUnitStackAllocator.c  m_windows_ImperfectUnitStackAllocator.h  m_windows_StateholdSource.c  m_windows_StateholdSource.h
src/language/: dedicated_parser.c  dedicated_parser.h
src/math/: base_n_math.h  bit_math.h  computation.h  fp_math.c  fp_math.h  frac_math.c  frac_math.h  frc_math.c  frc_math.h
src/objects/: Tree3D.c  Tree3D.h  binary_tree.c  binary_tree.h  binary_trie.c  binary_trie.h  dictionary.c  dictionary.h  dynarray.c  dynarray.h  map.c  map.h  pattern_tree.c  pattern_tree.h  pattern_trie.c  pattern_trie.h  sigbits_map.c  sigbits_map.h  tree.c  tree.h  universal_map.c  universal_map.h
