cmake_minimum_required(VERSION 3.15)
project(Catholicus)
set(CMAKE_MODULE_PATH ./build/)
set(PROJECT_SOURCE_DIR ./src/)
# compiler flags
if (CYGWIN OR MINGW OR MSYS OR UNIX)
    # set C standard to C18 revision
    add_compile_options(-std=c18)
    # set warnings
    add_compile_options(-Wall -Wpedantic -Wfatal-errors -Wextra)
    # ubsan (undefined, address, pointer-compare, pointer-subtract, leak)
    #add_compile_options(-fsanitize=undefined -fsanitize=address -fsanitize=pointer-compare -fsanitize=pointer-subtract -fsanitize=leak)
    #add_link_options(-fsanitize=undefined -fsanitize=address -fsanitize=pointer-compare -fsanitize=pointer-subtract -fsanitize=leak)
    if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
        add_compile_options(-g3 -Og)
    else ()
        add_compile_options(-Ofast)
    endif ()
endif ()
add_subdirectory(${PROJECT_SOURCE_DIR})